# deny

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: validate-pull-request.yml
denied/: ability.py  action.py  errors.py  permission.py  policy.py  utils.py
denied/_async/: ability.py  policy.py
denied/_sync/: ability.py  policy.py
denied/ext/: errors.py  falcon.py  fastapi.py  sanic.py
deny/: __init__.py  sync.py
deny/_async/: ability.py  policy.py
deny/_sync/: ability.py  policy.py
deny/ext/: falcon.py  fastapi.py  flask.py  sanic.py
examples/: common.py  falcon.py  fastapi.py  flask.py  sanic.py  sync.py  usage.py
tests/denied/: test_ability.py  test_auto_permission.py  test_policy.py
tests/denied/_async/: test_ability.py  test_policy.py
tests/denied/_sync/: test_ability.py  test_policy.py
tests/denied/ext/: test_falcon.py  test_fastapi.py  test_sanic.py
tests/deny/: test_auto_permission.py
tests/deny/_async/: test_ability.py  test_policy.py
tests/deny/_sync/: test_ability.py  test_policy.py
tests/deny/ext/: test_falcon.py  test_fastapi.py  test_flask.py  test_sanic.py
tests/utils/: models.py  permissions.py
utils/: run_unasync.py
